Fix errors container spacing

--- a/frontend/src/css/session_form.css
+++ b/frontend/src/css/session_form.css
@@ -55,7 +55,7 @@ div[class^="session-form"] {
   left: 0;
   top: 100%;
   width: 100%;
-  margin: 10px;
+  margin: 10px 0;
   padding: 3px 0;
 }
 
